<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Impact Converter</string>
    <string name="action_settings">Settings</string>
    <string name="sp_test">Enter text to test shared preferences</string>
    <string name="sp_test_hint">Enter Text</string>
    <string name="bt_tv">Converter Screen</string>
    <string name="button">Continue</string>
    <string name="car_speed_tw">Enter car speed</string>
    <string name="bt_txt">Return to main screen</string>
    <string name="returnBtn">Return</string>
    <string name="returned_value">temp text</string>
    <string name="click">Click Me</string>
    <string name="displayTV">Transferred Text</string>
    <string name="createString_t">Convert</string>

    <string-array name="list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>

</resources>