<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImpactConverterMain" >

    <EditText
        android:id="@+id/sp_test_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_enter_text"
        android:layout_centerInParent="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sp_test_hint" >
    </EditText>

    <TextView
        android:id="@+id/textView_enter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/sp_test"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/textView_for_button"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/button"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_for_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_test_ET"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/bt_tv"
        android:textSize="25sp" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_continue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignBaseline="@+id/var"
        android:layout_alignBottom="@+id/var"
        android:layout_alignLeft="@+id/textView_for_button"
        android:layout_marginLeft="20dp"
        android:textSize="25sp"
        android:text="@string/click" />
    
</RelativeLayout>